update enlist section with correct colors and alignment

--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ body {
 
 }
 
-
 a {
   text-decoration: none;
 }
@@ -83,14 +82,19 @@ h1 {
   gap: 8px;
 }
 
+button {
+  font-weight: 700;
+  padding: 12px 16px 12px 16px;
+  border-radius: 8px;
+  width: 150px;
+  font-size: 18px;
+  color: white;
+}
+
+
+
 .hero-button {
    background-color: #2778fa;
-   color: white;
-   font-weight: 700;
-   padding: 12px 16px 12px 16px;
-   border-radius: 8px;
-   font-size: 18px;
-   width: 150px;
    border-color: #2778fa;
 }
 
@@ -150,7 +154,6 @@ h2 {
   font-style: italic;
   font-size: 36px;
   color: #1F2937;
-  
   max-width: 800px;
 }
 
@@ -161,3 +164,31 @@ h2 {
   margin-left: 400px;
 }
 
+.enlist-now{
+  background-color: #3882F6;
+  margin: 128px;
+  padding: 36px;
+  display: flex;
+  justify-content: space-around;
+  column-gap: 80px;
+  padding: 64px;
+  border-radius: 8px;
+}
+
+.enlist-button {
+  background-color: #3882F6;
+  border: 2px solid #F9FAF8;
+}
+
+
+.enlist-title {
+  color: #F9FAF8;
+  font-weight: 700;
+  font-size: 28px;
+  margin-bottom: 6px;
+}
+
+.enlist-subtext {
+  color: #E5E7EB;
+  font-size: 18px;
+}
